--- a/wp-content/themes/test/style.css
+++ b/wp-content/themes/test/style.css
@@ -17,11 +17,9 @@ h1 {
 	margin: 0;
 	margin-top: 20px;
 	margin-bottom: 30px;
-	
     font-size: 26px;
     font-weight: normal;
     font-style: normal;
-    /* text-align: center; */
 	text-rendering: optimizeLegibility;
 	text-transform: uppercase;
 	line-height: 1.2;
@@ -31,11 +29,9 @@ h2 {
 	margin: 0;
     margin-top: 20px;
 	margin-bottom: 25px;
-	
     font-size: 24px;
     font-weight: normal;
     font-style: normal;
-    /* text-align: center; */
     text-rendering: optimizeLegibility;
 	line-height: 1.2;
     color: var(--color-h2);
@@ -44,11 +40,9 @@ h3 {
 	margin: 0;
     margin-top: 20px;
 	margin-bottom: 25px;
-	
     font-size: 18px;
     font-weight: bold;
     font-style: normal;
-    /* text-align: center; */
     text-rendering: optimizeLegibility;
 	line-height: 1.2;
     color: var(--color-h3);
@@ -57,11 +51,9 @@ h4 {
     margin: 0;
     margin-top: 20px;
 	margin-bottom: 25px;
-	
     font-size: 18px;
     font-weight: bold;
     font-style: normal;
-    /* text-align: center; */
 	text-rendering: optimizeLegibility;
 	line-height: 1.2;
     color: var(--color-h4);
@@ -70,7 +62,6 @@ h4 {
 p {
     margin: 0;
 	margin-bottom: 10px;
-	
     font-size: 18px;
 	text-align: justify;
 	line-height: 1.5;
@@ -86,6 +77,19 @@ a {
 }
 a:hover {
 	text-decoration: underline;
+}
+
+ul,
+ol {
+
+}
+li {
+	font-size: 18px;
+	line-height: 1.5;
+}
+
+img {
+    display: block;
 }
 
 /* ************************************************************************ */
